# fedmem

./: .gitignore  .runpod.yaml  AGENTS.md  AUTORESEARCH_PROMPT.md  AUTO_REVIEW.md  CLAUDE.md  PAPER_PLAN.md  RUNPOD_SUPP_SEEDS_TO_RUN.md  analyze_concept_count.py  check_gates.py  cifar100_findings.md  conftest.py  drct_analyze.py  drct_falsification_batch_var.csv  drct_falsification_concepts.csv  drct_falsification_test.py  drct_falsification_timeseries.csv  drct_rho_discrimination.csv  drct_rho_extended_data.csv  drct_rho_power_analysis.py  drct_rho_power_report.txt  extract_fmow_features.py  extract_fmow_features_wilds.py  findings.md  manage_findings.py  pyproject.toml  research-log.md  research-state.yaml  resume_diagnostics.py  resume_phase4.py  run_adapter_research_loop.py  run_anisotropic_shrinkage_validation.py  run_baseline_patch.py  run_cfl_ablation.py  run_cfl_oracle_gap_validation.py  run_cifar100_all_baselines_smoke.py  run_cifar100_bj_proxy.py  run_cifar100_bj_proxy_lowsnr.py  run_cifar100_budget_matched.py  run_cifar100_comparison.py  (+64 more)
.claude/: launch.json  settings.local.json
docs/: ASSET_FREEZE.md  CCF_A_DEADLINE_CALENDAR.html  CCF_A_DEADLINE_CALENDAR.md  PHASE4_CANDI_面向 SINE 决策边界差异的聚类联邦学习改进：IFCA 与 FedProTrack 的软聚合与 Fingerprint 表示路线深度调研报告.md  PHASE4_IMPROVEMENT_REPORT.md  hypotheses.jsonl  literature.jsonl  phase3_experiment_execution_plan.md  phase3_sine_gate_readout.md  theory_framework.md
fedprotrack/: __main__.py  cli.py  device.py  findings.py  research_review.py
paper/: TABLES_PROVENANCE.md  extensions_2.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main_old.tex  main_r1.aux  main_r1.bbl  main_r1.blg  main_r1.fdb_latexmk  main_r1.fls  main_r1.out  main_theory_notes_zh.md  main_v2.aux  main_v2.bbl  main_v2.blg  main_v2.out  main_v2.tex  neurips_2024.sty  references.bib  scheme_c_addendum.tex  slides.aux  slides.nav  slides.out  slides.tex  slides.toc  slides_cn.aux  slides_cn.nav  slides_cn.out  slides_cn.tex  slides_cn.toc  slides_script.md  slides_v2.aux  slides_v2.nav  slides_v2.out  slides_v2.toc  (+3 more)
results/: summary.json
results_phase3/: summary.json
results_phase3_e6_final/: summary.csv  summary.json
results_phase3_e6_smoke/: summary.csv  summary.json
results_phase3_final/: summary.csv  summary.json
results_phase3_v2_sine/: summary.csv  summary.json
results_phase3_v2_smoke/: summary.csv  summary.json
results_phase3_v3_sine_final/: summary.csv  summary.json
results_phase4/: PROGRESS.md  raw_e5.csv  raw_e6.csv
runpod/: Dockerfile  handler.py  submit_experiment.py  sync_code.py
tests/: test_adapter_research_loop.py  test_adaptive_fedavg.py  test_budget_metrics.py  test_cifar100_label_split.py  test_cifar10_recurrence.py  test_cifar_full_sweep.py  test_cifar_overlap.py  test_clustered_baselines.py  test_cnn_models.py  test_comm_fedproto.py  test_concept_matrix.py  test_concept_metrics.py  test_concept_tracker.py  test_data_streams.py  test_dirichlet_noniid.py  test_ditto.py  test_drift_detector.py  test_drift_metrics.py  test_experiment.py  test_factorized_adapter_model.py  test_feature_adapter_model.py  test_fedccfa.py  test_fedgwc.py  test_fedprotrack_runner.py  test_fedprox.py  test_findings.py  test_fmnist_recurrence.py  test_fmow.py  test_generator.py  test_hcfl.py  test_hungarian.py  test_identity_metric_audit.py  test_memory_bank.py  test_model_factory.py  test_namespaced_aggregator.py  test_new_baselines.py  test_personalized_baselines.py  test_phase3_experiments.py  test_phase_diagram.py  test_posterior.py  (+12 more)
tmp/: analyze_adapter.py  beta_A4prime_estimates.json  cfl_vs_fpt_mechanism_analysis.md  cifar100_phase_b_finding.md  compute_stats.py  debug_adapter.py  debug_adapter_agg.py  debug_adapter_fed.py  debug_adapter_fedfreq.py  debug_adapter_freeze.py  debug_adapter_nofed.py  debug_params_flow.py  diag_blend_sweep.py  diag_fingerprint_quality.py  diag_oracle_reid.py  diag_per_concept.py  diag_tight_fpt.py  diagnose_adapter.py  diagnose_adapter2.py  diagnose_adapter3.py  diagnose_adapter4.py  diagnose_oracle_cfl.py  diagnose_posterior.py  diagnose_posterior_v2.py  estimate_beta_A4prime.py  extract_fptot_flagship.py  fcl_review.md  (+15 more)
(+364 files in other folders)
