[project]
name = "fedprotrack"
version = "0.1.0"
description = "Federated Proactive Concept Identity Tracking"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "river>=0.21",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
fedprotrack = "fedprotrack.cli:main"
